--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-native-safe-area-context": "^0.7.3",
     "react-native-web": "^0.11.4",
     "react-navigation": "^4.3.7",
-    "react-navigation-stack": "^2.3.11"
+    "react-navigation-stack": "^2.3.11",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.1.1"
