--- a/package.json
+++ b/package.json
@@ -8,14 +8,20 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "^0.1.7",
+    "@react-native-community/masked-view": "^0.1.9",
+    "@react-navigation/bottom-tabs": "^5.2.6",
+    "@react-navigation/native": "^5.1.5",
+    "@react-navigation/stack": "^5.2.10",
     "expo": "^33.0.0",
     "moment": "^2.24.0",
     "numeral": "^2.0.6",
     "react": "16.8.3",
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
+    "react-native-gesture-handler": "~1.2.1",
+    "react-native-reanimated": "1.0.0-alpha.11",
     "react-native-safe-area-context": "^0.7.3",
+    "react-native-screens": "1.0.0-alpha.22",
     "react-native-web": "^0.11.4",
     "react-navigation": "^4.3.7",
     "react-navigation-stack": "^2.3.11",
